fix build issues.